--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">TalkToYourCreditCard</string>
+    <string name="action_licenses">Verwendete Bibliotheken und Lizenzen</string>
 </resources>
