--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TalkToYourCreditCard</string>
+    <string name="app_name">Talk to your Credit Card</string>
     <string name="action_licenses">Used libraries and their licenses</string>
     <string name="copy_right" translatable="false">Copyrights © %1$d</string>
     <string name="app_description">This is the basic app (part 0) for the \"Talk to your Credit Card\" application.\n\nThe full app reads your Credit Card and retrieves the card number and expiration date.</string>
